--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Invie</title>
+    <!-- Estilos de mi sitio Invie -->
+    <style media="screen">
+      body{
+        margin: 0;
+      }
+      img{
+        max-width: 100%;
+      }
+    </style>
   </head>
   <body>
-
+    <img src="asset/header.jpg" alt="Imagen del Header">
+    <img src="asset/hero.jpg" alt="Imagen de Hero">
   </body>
 </html>
