cargando acustica.jpg

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
       }
       img{
         max-width: 100%;
+        vertical-align: top;
       }
     </style>
   </head>
   <body>
     <img src="asset/header.jpg" alt="Imagen del Header">
     <img src="asset/hero.jpg" alt="Imagen de Hero">
+    <img src="asset/acustica.jpg" alt="Imagen de guitarra acustica">
   </body>
 </html>
