agredando guitarra clasica

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <img src="asset/header.jpg" alt="Imagen del Header">
     <img src="asset/hero.jpg" alt="Imagen de Hero">
     <img src="asset/acustica.jpg" alt="Imagen de guitarra acustica">
+    <img src="asset/clasica.jpg" alt="Imagen de guitarra clasica">
   </body>
 </html>
