agregando el footer de Invie

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <img src="asset/hero.jpg" alt="Imagen de Hero">
     <img src="asset/acustica.jpg" alt="Imagen de guitarra acustica">
     <img src="asset/clasica.jpg" alt="Imagen de guitarra clasica">
+    <img src="asset/footer.jpg" alt="Imagen del footer">
   </body>
 </html>
